--- a/index.html
+++ b/index.html
@@ -513,5 +513,26 @@
         </div>
       </div>
     </footer>
+
+    <div class="backdrop">
+      <div class="modal">
+        <button class="modal-close" type="button">x</button>
+        <p class="modal-header">
+          Leave your contacts and we will call you back
+        </p>
+        <label class="modal-label"
+          ><input class="modal-input" type="text"
+        /></label>
+        <label class="modal-label"
+          ><input class="modal-input" type="text"
+        /></label>
+        <label class="modal-label"
+          ><input class="modal-input" type="text"
+        /></label>
+        <label class="modal-label"
+          ><input class="modal-input" type="checkbox" name=""
+        /></label>
+      </div>
+    </div>
   </body>
 </html>
