--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button class="hero-btn" type="button">Order Service</button>
+          <button class="hero-btn btn" type="button">Order Service</button>
         </div>
       </section>
 
@@ -511,27 +511,111 @@
             </li>
           </ul>
         </div>
+        <form class="subscribe">
+          <label class="subscribe-label social-title" for="subscribe-email">
+            Subscribe
+          </label>
+          <div class="subscribe-wrap">
+            <input
+              class="subscribe-input"
+              type="email"
+              name="subscribe-email"
+              placeholder="E-mail"
+              id="subscribe-email"
+              required
+            />
+            <button class="btn" type="submit">
+              Subscribe
+              <svg class="subscribe-icon" width="24" height="20">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
 
     <div class="backdrop">
       <div class="modal">
-        <button class="modal-close" type="button">x</button>
+        <button class="modal-close" type="button">
+          <svg class="close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
         <p class="modal-header">
           Leave your contacts and we will call you back
         </p>
-        <label class="modal-label"
-          ><input class="modal-input" type="text"
-        /></label>
-        <label class="modal-label"
-          ><input class="modal-input" type="text"
-        /></label>
-        <label class="modal-label"
-          ><input class="modal-input" type="text"
-        /></label>
-        <label class="modal-label"
-          ><input class="modal-input" type="checkbox" name=""
-        /></label>
+        <form class="modal-form">
+          <label class="modal-label">
+            Name
+            <span class="modal-input-wrap">
+              <input
+                class="modal-input"
+                type="text"
+                name="user-name"
+                autofocus
+                required
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-label">
+            Phone
+            <span class="modal-input-wrap">
+              <input
+                class="modal-input"
+                type="tel"
+                name="user-phone"
+                required
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-label">
+            Email
+            <span class="modal-input-wrap">
+              <input
+                class="modal-input"
+                type="email"
+                name="user-email"
+                required
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-label modal-label-comment">
+            Comment
+            <textarea
+              class="modal-input modal-comment"
+              name="user-comment"
+              rows="7"
+              id=""
+              placeholder="Text input"
+            ></textarea>
+          </label>
+          <input
+            class="check visually-hidden"
+            type="checkbox"
+            name="accept_PP"
+            id="check"
+            required
+          />
+          <label class="modal-label modal-label-ppolicy" for="check">
+            <span>
+              <svg class="check-icon" width="10" height="8">
+                <use href="./images/icons.svg#icon-check"></use>
+              </svg> </span
+            >I accept the terms and conditions of the
+            <a class="ppolicy" href="">Privacy Policy</a>
+          </label>
+          <button class="btn" type="submit">Send</button>
+        </form>
       </div>
     </div>
   </body>
