--- a/index.html
+++ b/index.html
@@ -592,10 +592,8 @@
               </svg>
             </div>
           </div>
-          <div class="label-input-wrap">
-            <label class="modal-label modal-label-comment" for="user-comment">
-              Comment
-            </label>
+          <div class="label-com-input-wrap">
+            <label class="modal-label" for="user-comment"> Comment </label>
             <textarea
               class="modal-input modal-comment"
               name="user-comment"
