--- a/index.html
+++ b/index.html
@@ -470,6 +470,7 @@
             digital marketing & growth solutions.
           </p>
         </div>
+
         <div class="social-media">
           <p class="social-title">Social media</p>
           <ul class="social-list">
@@ -511,22 +512,23 @@
             </li>
           </ul>
         </div>
+
         <div class="subscribe">
-          <label class="subscribe-label social-title" for="subscribe-email">
-            Subscribe
-          </label>
-          <form class="subscribe-wrap">
-            <input
-              class="subscribe-input"
-              type="email"
-              name="subscribe-email"
-              placeholder="E-mail"
-              id="subscribe-email"
-              required
-            />
+          <p class="social-title">Subscribe</p>
+          <form class="subscribe-form">
+            <label class="subscribe-label" for="subscribe-email">
+              <input
+                class="subscribe-input"
+                type="email"
+                name="subscribe-email"
+                placeholder="E-mail"
+                id="subscribe-email"
+                required
+              />
+            </label>
             <button class="btn" type="submit">
               Subscribe
-              <svg class="subscribe-icon" width="24" height="20">
+              <svg class="subscribe-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-send"></use>
               </svg>
             </button>
@@ -535,7 +537,7 @@
       </div>
     </footer>
 
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button class="modal-close" type="button">
           <svg class="close-icon" width="8" height="8">
