--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
       </div>
     </footer>
 
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button class="modal-close" type="button">
           <svg class="close-icon" width="8" height="8">
@@ -614,7 +614,7 @@
               required
             />
             <label class="modal-label modal-label-ppolicy" for="user-privacy">
-              <span>
+              <span class="check-icon-span">
                 <svg class="check-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg> </span
