--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
       </div>
     </footer>
 
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button class="modal-close" type="button">
           <svg class="close-icon" width="8" height="8">
