--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
               required
             />
             <label class="modal-label modal-label-ppolicy" for="user-privacy">
-              <span class="check-icon-span">
+              <span class="check-icon-wrap">
                 <svg class="check-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg> </span
