--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
               value="true"
               required
             />
-            <label class="modal-label modal-label-ppolicy" for="user-privacy">
+            <label class="modal-label-ppolicy" for="user-privacy">
               <span class="check-icon-wrap">
                 <svg class="check-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-check"></use>
